--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Deeplink Test</string>
     <string name="deeplink_label_nearbypasal">Nearby pasal deeplink</string>
+    <string name="channel_name">File Created Notification</string>
+    <string name="channel_description">You will get notification for the file saved status through this channel.</string>
 </resources>
